--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,7 +43,7 @@ a {
   top: -44px;
   padding: 52px 0 8px;
   background-color: #fff;
-  z-index: 1;
+  z-index: 9;
 }
 
 .header .row {
@@ -271,4 +271,181 @@ a {
 
 .hero-media .avatar-list {
   margin-top: 8px;
+}
+
+/* ===== Features ===== */
+.features {
+  margin-top: 209px;
+}
+
+.features-info {
+  width: 590px;
+}
+
+.features-info .sub-title {
+  color: #767e7e;
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: 4px;
+}
+
+.features-info .title {
+  margin: 18px 0;
+  color: #0d1111;
+  font-size: 4.2rem;
+  font-weight: 700;
+  line-height: 1.33;
+}
+
+.features-info .desc {
+  color: #767e7e;
+  font-size: 1.8rem;
+  line-height: normal;
+}
+
+.features-list {
+  margin-top: 80px;
+  justify-content: space-between;
+}
+
+.features-list .item {
+  width: 19%;
+}
+
+.features-list .item .title {
+  margin-top: 26px;
+  color: #0d1111;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.features-list .item .desc {
+  margin-top: 16px;
+  color: #9da6a5;
+  line-height: 1.68;
+}
+
+/* ====== Courses ===== */
+.courses {
+  margin-top: 130px;
+}
+
+.courses-info .sub-title {
+  color: #767e7e;
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: 4px;
+}
+
+.courses-info .title {
+  margin: 18px 0;
+  color: #0d1111;
+  font-size: 4.2rem;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.courses-info .row {
+  justify-content: space-between;
+}
+
+.courses-info .desc {
+  width: 44%;
+  color: #767e7e;
+  font-size: 1.8rem;
+  line-height: 1.77;
+}
+
+.courses-info .link {
+  color: #1ebfc1;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-decoration-line: underline;
+}
+
+.courses-list {
+  margin-top: 79px;
+  align-items: flex-start;
+  gap: 47px;
+}
+
+.courses-item {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.courses-item .img-block {
+  position: relative;
+}
+
+.courses-item .img-block::before {
+  content: "";
+  display: block;
+  position: absolute;
+  inset: 0;
+  border-radius: 8px;
+  opacity: 0.35;
+  background: #d0efed;
+}
+
+.courses-item .img-block img {
+  width: 359px;
+  height: 393px;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.courses-item .info {
+  margin-top: -70px;
+  width: 92%;
+  padding: 18px 25px 29px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 16px 90px 0px rgba(0, 0, 0, 0.05);
+  z-index: 1;
+}
+
+.courses-item .title a {
+  color: #0d1111;
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.courses-item .price {
+  margin-top: 16px;
+  color: #767e7e;
+}
+
+.courses-item .price b {
+  color: #0d1111;
+  font-size: 2.2rem;
+  font-weight: 700;
+}
+
+.courses-item .desc {
+  margin-top: 6px;
+  font-size: 1.4rem;
+  color: #9da6a5;
+  line-height: normal;
+}
+
+.courses-item .row {
+  margin-top: 18px;
+  gap: 8px;
+}
+
+.courses-item .row p {
+  position: relative;
+  font-size: 1.4rem;
+  color: #9da6a5;
+}
+
+.courses-item .row .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #1ebfc1;
 }
