--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -473,3 +473,118 @@ a {
   text-align: center;
   font-size: 1.8rem;
 }
+
+/* ===== Feedback ===== */
+.feedback .row {
+  gap: 72px;
+}
+
+.feedback-info {
+  width: 36%;
+}
+
+.feedback-list {
+  display: flex;
+  overflow: hidden;
+}
+
+.feedback-list .item {
+  flex-shrink: 0;
+  flex-basis: 100%;
+}
+
+.feedback-list .item .text {
+  margin-top: 27px;
+  color: #5d6564;
+  font-size: 3.2rem;
+  line-height: 1.5;
+}
+
+.feedback-list .item .person {
+  margin-top: 33px;
+  color: #767e7e;
+}
+
+.feedback-list .person b {
+  color: #070707;
+  font-weight: 500;
+}
+
+.feedback-info .direction {
+  margin-top: 52px;
+}
+
+.feedback-info .direction button {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  color: #fff;
+  font-size: 2rem;
+  background-color: #2ac9bf;
+  border-radius: 50%;
+  border: none;
+}
+
+.feedback-info .direction button:last-child {
+  margin-left: 30px;
+}
+
+.feedback-avatar {
+  position: relative;
+  width: 58%;
+  height: 481px;
+  margin-left: auto;
+}
+
+.feedback-avatar .avatar {
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.feedback-avatar .avatar:first-child {
+  position: absolute;
+  top: 0;
+  left: 144px;
+  width: 92px;
+  height: 92px;
+}
+
+.feedback-avatar .avatar:nth-child(2) {
+  width: 110px;
+  height: 110px;
+  position: absolute;
+  top: 19px;
+  right: 0;
+}
+
+.feedback-avatar .avatar:nth-child(3) {
+  width: 235px;
+  height: 235px;
+  position: absolute;
+  top: 107px;
+  left: 273px;
+}
+
+.feedback-avatar .avatar:nth-child(4) {
+  width: 78px;
+  height: 78px;
+  position: absolute;
+  left: 0;
+  bottom: 145px;
+}
+
+.feedback-avatar .avatar:nth-child(5) {
+  width: 78px;
+  height: 78px;
+  position: absolute;
+  right: 32px;
+  bottom: 29px;
+}
+
+.feedback-avatar .avatar:last-child {
+  width: 78px;
+  height: 78px;
+  position: absolute;
+  left: 212px;
+  bottom: 0;
+}
